# aero-grep

./: .gitignore  BENCH.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  release.yml
assets/macos/: Info.plist
doc/: design.md  test-plan.md  testing.md
src/: app.rs  config.rs  grep.rs  history.rs  main.rs  models.rs
wix/: License.rtf  main.wxs
