[package]
name = "aero-grep"
version = "0.1.2"
edition = "2021"
authors = ["orapli"]
description = "Fast cross-project full-text search GUI"
homepage = "https://github.com/orapli/aero-grep"
repository = "https://github.com/orapli/aero-grep"
license = "MIT"

[[bin]]
name = "aero-grep"
path = "src/main.rs"

[dependencies]
eframe = "0.34"
egui = "0.34"
rayon = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ignore = "0.4"
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
rfd = "0.14"
anyhow = "1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
